[package]
edition = "2021"
name = "rbtc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11.0"
bincode = "1.3.3"
bs58 = "0.4.0"
ethnum = "1.1.1"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = {version = "1.0.136", features = ["derive"]}
socket2 = "0.4.4"
